# edge-ai-libraries

.github/: CODEOWNERS
microservices/audio-analyzer/: Dockerfile  README.md  config.container.yaml  config.yaml  docker-compose.yml  main.py  requirements.txt
microservices/audio-analyzer/api/: custom_endpoints.py  openai_endpoints.py
microservices/audio-analyzer/components/: asr_component.py
microservices/audio-analyzer/components/ffmpeg/: audio_preprocessing.py
microservices/audio-analyzer/docs/: api.md  configuration.md  run-container.md  run-standalone.md
microservices/audio-analyzer/tests/: test_pipeline_and_audio_util.py
microservices/audio-analyzer/utils/: app_paths.py  audio_util.py
microservices/dlstreamer-pipeline-server/plugins/camera/: build_gencamsrc.txt  notepad_commands.txt
microservices/dlstreamer-pipeline-server/plugins/camera/src-gst-gencamsrc/: .gitignore  BUILD_WINDOWS.md  CMakeLists.txt  README.md  build-windows.ps1  build_gencamsrc.ps1
microservices/dlstreamer-pipeline-server/plugins/camera/src-gst-gencamsrc/.github/: copilot-instructions.md
microservices/dlstreamer-pipeline-server/plugins/camera/src-gst-gencamsrc/plugins/genicam-core/rc_genicam_api/: gentl_wrapper_win.cc  gentl_wrapper_windows.cc
microservices/dlstreamer-pipeline-server/src/: requirements.txt
microservices/dlstreamer-pipeline-server/src/server/: gstreamer_pipeline.py
microservices/dlstreamer-pipeline-server/tests/: test_server_gstreamer_pipeline.py
microservices/model-download/: pyproject.toml
microservices/model-download/docker/: entrypoint.sh
microservices/model-download/docs/user-guide/: get-started.md  index.md  migration.md  release-notes.md
microservices/model-download/src/api/: models.py
microservices/model-download/src/plugins/: __init__.py  ultralytics_plugin.py
microservices/model-download/tests/unit/: test_api_main.py
microservices/multimodal-embedding-serving/: pyproject.toml  setup.sh
microservices/multimodal-embedding-serving/docs/user-guide/: get-started.md
microservices/multimodal-embedding-serving/src/: wrapper.py
microservices/multimodal-embedding-serving/src/models/: base.py
microservices/multimodal-embedding-serving/src/utils/: __init__.py  common.py  decoder.py  utils.py
microservices/text-to-speech/: .gitignore  Dockerfile  README.md  config.container.yaml  config.yaml  docker-compose.yml  main.py  pipeline.py  test_service_hardening.py
microservices/text-to-speech/api/: custom_endpoints.py  openai_endpoints.py
microservices/text-to-speech/components/tts/: base.py
microservices/text-to-speech/docs/: api.md  configuration.md  run-container.md  run-standalone.md
microservices/text-to-speech/dto/: speech_dto.py
microservices/time-series-analytics/: third-party-programs.txt
microservices/time-series-analytics/docs/user-guide/: release-notes.md
microservices/time-series-analytics/tests-functional/: rest_api_utils.py
microservices/vlm-openvino-serving/: pyproject.toml
microservices/vlm-openvino-serving/docker/: Dockerfile
sample-applications/chat-question-and-answer-core/: pyproject.toml
sample-applications/chat-question-and-answer-core/chart/: Chart.yaml
sample-applications/chat-question-and-answer-core/docker/: Dockerfile  Dockerfile.ollama  compose.yaml
sample-applications/chat-question-and-answer-core/docs/user-guide/: get-started.md  release-notes.md
sample-applications/chat-question-and-answer-core/ui/: package-lock.json
sample-applications/chat-question-and-answer/docs/user-guide/: release-notes.md
sample-applications/document-summarization/: pyproject.toml
sample-applications/video-search-and-summarization/: .gitignore  README.md  build.sh  setup.sh
sample-applications/video-search-and-summarization/chart/: Chart.yaml  search_override.yaml  summary_override.yaml  unified_summary_search.yaml  user_values_override.yaml  values.yaml  xeon_vllm_values.yaml
sample-applications/video-search-and-summarization/chart/templates/: _helpers.tpl  nginx-deployment.yaml  pipeline-manager-deployment.yaml
sample-applications/video-search-and-summarization/config/: nginx.conf
sample-applications/video-search-and-summarization/docker/: compose.base.yaml  compose.search.yaml  compose.summary.yaml
sample-applications/video-search-and-summarization/docs/user-guide/: build-from-source.md  deploy-with-helm.md  get-started.md  mcp-server.md  release-notes.md  troubleshooting.md
sample-applications/video-search-and-summarization/mcp/: Dockerfile  README.md  pyproject.toml
sample-applications/video-search-and-summarization/pipeline-manager/: Dockerfile  package-lock.json  package.json
sample-applications/video-search-and-summarization/search-ms/: pyproject.toml  server.py
sample-applications/video-search-and-summarization/search-ms/docker/: Dockerfile
sample-applications/video-search-and-summarization/ui/react/: package-lock.json  package.json
sample-applications/video-search-and-summarization/video-ingestion/: requirements.txt
sample-applications/video-search-and-summarization/video-ingestion/docker/: Dockerfile
tools/visual-pipeline-and-platform-evaluation-tool/: .gitignore  AGENTS.md  Makefile  compose.yml
tools/visual-pipeline-and-platform-evaluation-tool/models/: Dockerfile
tools/visual-pipeline-and-platform-evaluation-tool/shared/models/: supported_models.yaml
tools/visual-pipeline-and-platform-evaluation-tool/shared/videos/: default_recordings.yaml
tools/visual-pipeline-and-platform-evaluation-tool/ui/: .env.local.example  nginx.conf  package-lock.json  package.json  vite.config.ts
tools/visual-pipeline-and-platform-evaluation-tool/video_generator/: Dockerfile
tools/visual-pipeline-and-platform-evaluation-tool/vippet/: Dockerfile  benchmark.py  graph.py  internal_types.py  models.py  utils.py
tools/visual-pipeline-and-platform-evaluation-tool/vippet/api/: api_schemas.py  main.py
tools/visual-pipeline-and-platform-evaluation-tool/vippet/managers/: metadata_manager.py  pipeline_manager.py  tests_manager.py
(+88 files in other folders)
